# SimpleHTTPServe

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.py
SimpleHTTP/: __init__.py  app.py  response.py  server.py
SimpleHTTPServe/: app.py  server.py
tests/: Makefile  app_tests.py
