[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SimpleHTTPServe"
version = "0.0.3"
authors = [
  { name="Aman Goyal", email="amangoyal8110@gmail.com" },
]
description = "SimpleHTTP is a minimalist, no-nonsense HTTP server written in Python. Created purely for fun, this server is as simple as it gets—no third-party dependencies, no unnecessary features, just pure, unfiltered HTTP handling. Note that this project is currently unstable and primarily a learning experiment."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/goyal-aman/SimpleHTTP"
Issues = "https://github.com/goyal-aman/SimpleHTTP/issues"